--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="text-center row">
-    <h1>Bucketlist</h1>
+    <h1>To Do List App with Javascript</h1>
   </div>
   <div class="col-sm-4 inputHalf">
     <div class="row">
