--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BucketList</title>
+  <title>List App</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -13,28 +13,32 @@
   <div class="text-center row">
     <h1>To Do List App with Javascript</h1>
   </div>
-  <div class="col-sm-4 inputHalf">
-    <div class="row">
-      <input type="text" id="inputBox" placeholder="hello">
-    </div>
-    <div class="row">
-      <button id="submitButton">Submit</button>
+  <div class="row inputHalf">
+    <div class="col-sm-4 col-sm-offset-4">
+      <div class="row input-center">
+        <input type="text" id="inputBox" placeholder="hello">
+      </div>
+      <div class="row input-center">
+        <button id="submitButton">Submit</button>
+      </div>
     </div>
   </div>
-  <div class="col-sm-8 outputHalf text-center">
-    <div class="row" id="nameTitle"></div>
-    <div class="row">
-      <div class="col-sm-4">
-        <h6>Mark as done?</h6>
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2 outputHalf text-center">
+      <div class="row" id="nameTitle"></div>
+      <div class="row">
+        <div class="col-sm-4">
+          <h6>Mark as done?</h6>
+        </div>
+        <div class="col-sm-4">
+          <h6>Click to Edit</h6>
+        </div>
+        <div class="col-sm-4">
+          <h6>Delete</h6>
+        </div>
       </div>
-      <div class="col-sm-4">
-        <h6>Click to Edit</h6>
-      </div>
-      <div class="col-sm-4">
-        <h6>Delete</h6>
-      </div>
+      <div id=listItemHolder></div>
     </div>
-    <div id=listItemHolder></div>
   </div>
   <script src="js/scripts.js" charset="utf-8"></script>
 </body>
