add create list item on enter key press

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="row inputHalf">
     <div class="col-sm-4 col-sm-offset-4">
       <div class="row input-center">
-        <input type="text" id="inputBox" placeholder="hello">
+        <input type="text" id="inputBox">
       </div>
       <div class="row input-center">
         <button id="submitButton">Submit</button>
