--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
-<body>
-  <div class="text-center row">
-    <h1>To Do List App with Javascript</h1>
+<body id="bodyTag" class="thisClass">
+  <div class="text-center">
+    <div class="row">
+        <ul class="nav center-theme-button">
+          <li role="presentation" class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+              Themes <span class="caret"></span>
+            </a>
+              <ul class="dropdown-menu theme-menu text-center">
+                <li class="text-center" id="defaultTheme">Default</li>
+                <li class="text-center" id="halloweenTheme">Halloween</li>
+                <li class="text-center" id="usaTheme">U.S.A.</li>
+                <li class="text-center" id="moneyTheme">Money</li>
+              </ul>
+          </li>
+        </ul>
+    </div>
+    <div class="row">
+      <h1>To Do List App with Javascript</h1>
+    </div>
   </div>
   <div class="row inputHalf">
     <div class="col-sm-4 col-sm-offset-4">
@@ -40,6 +57,8 @@
       <div id=listItemHolder></div>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js" charset="utf-8"></script>
   <script src="js/scripts.js" charset="utf-8"></script>
 </body>
 </html>
