--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       <div id=listItemHolder></div>
     </div>
   </div>
+  <div class="row text-center">
+    <div class="col-sm-10 col-sm-offset-1 api-styles">
+      <div class="row">
+        <h4>Test Api Section</h4>
+        <div class="row" id="apiDiv">
+          
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="js/bootstrap.min.js" charset="utf-8"></script>
   <script src="js/scripts.js" charset="utf-8"></script>
