--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="col-sm-10 col-sm-offset-1 api-styles">
+    <div class="api-styles">
       <div class="row">
         <h4>Test Api Section</h4>
         <div class="row" id="apiDiv">
-          
+
         </div>
       </div>
     </div>
