--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="text-center">
     <div class="row">
         <ul class="nav center-theme-button">
-          <li role="presentation" class="dropdown">
+          <li role="presentation" class="dropdown theme-button-bg">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
               Themes <span class="caret"></span>
             </a>
@@ -58,10 +58,11 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="api-styles">
+    <div class="space-api">
       <div class="row">
-        <h4>Test Api Section</h4>
-        <div class="row" id="apiDiv">
+        <h4>Previous Users...</h4>
+        <p>*This is only to test query an API. You are NOT being tracked*</p>
+        <div class="row text-center api-styles" id="apiDiv">
 
         </div>
       </div>
