finished project/sloppy css

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
   </div>
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 outputHalf text-center">
-      <div class="row" id="nameTitle"></div>
-      <div class="row">
-        <div class="col-sm-4">
+      <div class="row list-title" id="nameTitle"></div>
+      <div class="row three-style">
+        <div class="col-sm-4 check-style">
           <h6>Mark as done?</h6>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 edit-style">
           <h6>Click to Edit</h6>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 delete-style">
           <h6>Delete</h6>
         </div>
       </div>
@@ -61,7 +61,7 @@
     <div class="space-api">
       <div class="row">
         <h4>Previous Users...</h4>
-        <p>*This is only to test query an API. You are NOT being tracked*</p>
+        <p class="warn-red">*This is only to test query an API. You are NOT being tracked*</p>
         <div class="row text-center api-styles" id="apiDiv">
 
         </div>
